apps/prod/tibuild/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tibuild
  annotations:
    scheduler.alpha.kubernetes.io/defaultTolerations: '[{"operator": "Equal", "effect":
      "NoSchedule", "key": "dedicated", "value": "test-infra"}]'
    scheduler.alpha.kubernetes.io/node-selector: enable-ci=true
