apps/prod/tibuild/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tibuild
spec:
  ports:
    - port: 80 
      targetPort: 8080 
  selector:
    app: tibuild
