apps/prod/tibuild/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tibuild
spec:
  ingressClassName: nginx
  rules:
    - host: tibuild.pingcap.net 
      http: 
        paths:
          - path: / 
            pathType: Prefix
            backend:
              service:
                name: tibuild
                port:
                  number: 80
